fix: swagger filter project
