# docs/swagger.json
@@ -974,18 +974,13 @@
                         "in": "query"
                     },
                     {
+                        "enum": [
+                            "newest",
+                            "highestprice",
+                            "lowestprice"
+                        ],
                         "type": "string",
                         "description": "Sort",
-                        "name": "sort",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "name": "keyword",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
                         "name": "sort",
                         "in": "query"
                     },
@@ -994,6 +989,7 @@
                         "items": {
                             "type": "integer"
                         },
+                        "description": "Filter Skills",
                         "name": "filter",
                         "in": "query"
                     }
@@ -1657,23 +1653,6 @@
                 },
                 "startYear": {
                     "type": "integer"
-                }
-            }
-        },
-        "models.FilterProject": {
-            "type": "object",
-            "properties": {
-                "filter": {
-                    "type": "array",
-                    "items": {
-                        "type": "integer"
-                    }
-                },
-                "keyword": {
-                    "type": "string"
-                },
-                "sort": {
-                    "type": "string"
                 }
             }
         },
